@@ -2,16 +2,12 @@ package com.openlattice.chronicle.services;
 
 import com.dataloom.streams.StreamUtil;
 import com.google.common.collect.*;
-import com.openlattice.apps.App;
-import com.openlattice.apps.AppApi;
-import com.openlattice.apps.UserAppConfig;
-import com.openlattice.authorization.securable.AbstractSecurableObject;
 import com.openlattice.chronicle.constants.*;
+import com.openlattice.chronicle.data.ChronicleCoreAppConfig;
+import com.openlattice.chronicle.data.ChronicleDataCollectionAppConfig;
+import com.openlattice.chronicle.services.edm.EdmCacheManager;
+import com.openlattice.chronicle.services.entitysets.EntitySetIdsManager;
 import com.openlattice.client.ApiClient;
-import com.openlattice.collections.CollectionTemplateType;
-import com.openlattice.collections.CollectionsApi;
-import com.openlattice.collections.EntitySetCollection;
-import com.openlattice.collections.EntityTypeCollection;
 import com.openlattice.data.DataApi;
 import com.openlattice.data.requests.EntitySetSelection;
 import com.openlattice.data.requests.FileType;
@@ -31,20 +27,11 @@ import java.util.stream.Collectors;
 
 import static com.openlattice.chronicle.constants.AppComponent.CHRONICLE;
 import static com.openlattice.chronicle.constants.AppComponent.CHRONICLE_DATA_COLLECTION;
-import static com.openlattice.chronicle.constants.CollectionTemplateTypeName.DEVICE;
-import static com.openlattice.chronicle.constants.CollectionTemplateTypeName.PARTICIPANTS;
-import static com.openlattice.chronicle.constants.CollectionTemplateTypeName.PARTICIPATED_IN;
-import static com.openlattice.chronicle.constants.CollectionTemplateTypeName.STUDIES;
-import static com.openlattice.chronicle.constants.CollectionTemplateTypeName.USER_APPS;
-import static com.openlattice.chronicle.constants.EdmConstants.APPS_DICTIONARY_ES;
-import static com.openlattice.chronicle.constants.EdmConstants.DEVICES_ES;
 import static com.openlattice.chronicle.constants.EdmConstants.FULL_NAME_FQN;
-import static com.openlattice.chronicle.constants.EdmConstants.PARTICIPATED_IN_ES;
 import static com.openlattice.chronicle.constants.EdmConstants.PERSON_ID_FQN;
+import static com.openlattice.chronicle.constants.EdmConstants.RECORDED_DATE_TIME_FQN;
 import static com.openlattice.chronicle.constants.EdmConstants.RECORD_TYPE_FQN;
 import static com.openlattice.chronicle.constants.EdmConstants.STRING_ID_FQN;
-import static com.openlattice.chronicle.constants.EdmConstants.STUDY_ES;
-import static com.openlattice.chronicle.constants.EdmConstants.USER_APPS_ES;
 import static com.openlattice.chronicle.util.ChronicleServerUtil.getFirstUUIDOrNull;
 import static com.openlattice.chronicle.util.ChronicleServerUtil.getFirstValueOrNull;
 import static com.openlattice.chronicle.util.ChronicleServerUtil.getParticipantEntitySetName;
@@ -56,62 +43,75 @@ import static com.openlattice.edm.EdmConstants.ID_FQN;
 public class ScheduledTasksManager {
     protected final Logger logger = LoggerFactory.getLogger( ScheduledTasksManager.class );
 
-    private final long ENTITY_SETS_REFRESH_INTERVAL  = 15 * 60 * 1000; // 15 minutes
     private final long USER_APPS_REFRESH_INTERVAL    = 60 * 1000; // 1 minute
     private final long STUDY_INFO_REFRESH_INTERVAL   = 60 * 1000; // 1 minute
     private final long SYNC_USER_REFRESH_INTERVAL    = 60 * 1000; // 1 minute
     private final long SYSTEM_APPS_REFRESH_INTERVAL  = 60 * 60 * 1000; // 1 hour
     private final long DEVICES_INFO_REFRESH_INTERVAL = 60 * 1000; // 1 minute
 
-    // appName -> orgId -> templateName -> entitySetID
-    public final Map<AppComponent, Map<UUID, Map<CollectionTemplateTypeName, UUID>>> entitySetIdsByOrgId = Maps
-            .newHashMap();
-
     // orgId -> studyId -> participantId -> EKID
-    public final Map<UUID, Map<UUID, Map<String, UUID>>> studyParticipantsByOrg = Maps.newHashMap();
+    private final Map<UUID, Map<UUID, Map<String, UUID>>> studyParticipantsByOrg = Maps.newHashMap();
 
     // orgId -> studyId -> studyEKID
-    public final Map<UUID, Map<UUID, UUID>> studyEntityKeyIdsByOrg = Maps.newHashMap();
+    private final Map<UUID, Map<UUID, UUID>> studyEntityKeyIdsByOrg = Maps.newHashMap();
 
     // orgId -> deviceId -> deviceEKID
-    public final Map<UUID, Map<String, UUID>> deviceIdsByOrg = Maps.newHashMap();
+    private final Map<UUID, Map<String, UUID>> deviceIdsByOrg = Maps.newHashMap();
 
     // app fullName -> { org1, org2, org3 }
-    public final Map<String, Set<UUID>> userAppsFullNamesByOrg = Maps.newLinkedHashMap();
+    private final Map<String, Set<UUID>> userAppsFullNamesByOrg = Maps.newLinkedHashMap();
 
     // deviceId -> deviceEKID
-    public final Map<String, UUID> deviceIdsByEKID = Maps.newHashMap();
+    private final Map<String, UUID> deviceIdsByEKID = Maps.newHashMap();
 
     // studyId -> participantId -> participant EKID
-    public final Map<UUID, Map<String, UUID>> studyParticipants = Maps.newHashMap();
+    private final Map<UUID, Map<String, UUID>> studyParticipants = Maps.newHashMap();
 
     // studyId -> studyEKID
-    public final Map<UUID, UUID> studyEKIDById = Maps.newHashMap();
+    private final Map<UUID, UUID> studyEKIDById = Maps.newHashMap();
 
     // app fullnames in chronicle_user_apps entity set
-    public final Set<String> userAppsFullNameValues = Sets.newHashSet();
+    private final Set<String> userAppsFullNameValues = Sets.newHashSet();
 
     // app fullnames in chronicle_application_dictionary entity set
-    public final Set<String> systemAppPackageNames = Sets.newHashSet();
+    private final Set<String> systemAppPackageNames = Sets.newHashSet();
 
-    private final ApiCacheManager apiCacheManager;
-    private final EdmCacheManager edmCacheManager;
+    private final ApiCacheManager     apiCacheManager;
+    private final EdmCacheManager     edmCacheManager;
+    private final EntitySetIdsManager entitySetIdsManager;
 
     public ScheduledTasksManager(
             ApiCacheManager apiCacheManager,
-            EdmCacheManager edmCacheManager ) throws ExecutionException {
+            EdmCacheManager edmCacheManager,
+            EntitySetIdsManager entitySetIdsManager ) throws ExecutionException {
         this.apiCacheManager = apiCacheManager;
         this.edmCacheManager = edmCacheManager;
+        this.entitySetIdsManager = entitySetIdsManager;
 
         syncCallingUser();
-        initializeEntitySets();
         refreshAllOrgsUserAppFullNames();
-        refreshUserAppsFullNames();
+        legacyRefreshUserAppsFullNames();
         refreshAllOrgsStudyInformation();
         refreshSystemApps();
-        refreshDevicesCache();
+        legacyRefreshDevicesCache();
         refreshAllOrgsDevicesCache();
-        refreshStudyInformation();
+        legacyRefreshStudyInformation();
+    }
+
+    // helper methods
+    private Iterable<SetMultimap<FullQualifiedName, Object>> getEntitySetData(
+            DataApi dataApi,
+            UUID entitySetId,
+            Set<FullQualifiedName> fqns ) {
+        return dataApi
+                .loadSelectedEntitySetData(
+                        entitySetId,
+                        new EntitySetSelection(
+                                Optional.of( fqns.stream().map( edmCacheManager::getPropertyTypeId ).collect(
+                                        Collectors.toSet() ) )
+                        ),
+                        FileType.json
+                );
     }
 
     @Scheduled( fixedRate = SYNC_USER_REFRESH_INTERVAL )
@@ -123,72 +123,8 @@ public class ScheduledTasksManager {
 
             principalApi.syncCallingUser();
         } catch ( Exception e ) {
-            logger.info( "error when attempting to sync user" );
+            logger.error( "error when attempting to sync user", e );
         }
-    }
-
-    @Scheduled( fixedRate = ENTITY_SETS_REFRESH_INTERVAL )
-    public void initializeEntitySets() throws ExecutionException {
-        logger.info( "Refreshing entity set ids map" );
-
-        ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
-        AppApi appApi = apiClient.getAppApi();
-        CollectionsApi collectionsApi = apiClient.getCollectionsApi();
-
-        // create a app -> appId mapping
-        Map<AppComponent, UUID> appNameIdMap = Maps.newHashMapWithExpectedSize( AppComponent.values().length );
-        for ( AppComponent component : AppComponent.values() ) {
-            App app = appApi.getAppByName( component.toString() );
-            appNameIdMap.put( component, app.getId() );
-        }
-
-        Map<AppComponent, Map<UUID, Map<CollectionTemplateTypeName, UUID>>> entitySets = new HashMap<>();
-
-        // get configs for each app
-        appNameIdMap.forEach( ( appComponent, appId ) -> {
-            List<UserAppConfig> configs = appApi.getAvailableAppConfigs( appId );
-
-            if ( configs.isEmpty() )
-                return;
-
-            // get EntityTypeCollection associated with app
-            EntitySetCollection entitySetCollection = collectionsApi
-                    .getEntitySetCollection( configs.get( 0 ).getEntitySetCollectionId() );
-            EntityTypeCollection entityTypeCollection = collectionsApi
-                    .getEntityTypeCollection( entitySetCollection.getEntityTypeCollectionId() );
-
-            // create mapping from templateTypeName -> templateTypeId
-            Map<String, UUID> templateTypeNameIdMap = entityTypeCollection
-                    .getTemplate()
-                    .stream()
-                    .collect( Collectors.toMap( CollectionTemplateType::getName, AbstractSecurableObject::getId ) );
-
-            // for each config map orgId -> templateTypeName -> ESID
-            Map<UUID, Map<CollectionTemplateTypeName, UUID>> orgEntitySetMap = new HashMap<>();
-
-            configs.forEach( userAppConfig -> {
-                Map<UUID, UUID> templateTypeIdESIDMap = collectionsApi
-                        .getEntitySetCollection( userAppConfig.getEntitySetCollectionId() ).getTemplate();
-
-                // iterate over templateTypeName enums and create mapping templateTypeName -> entitySetId
-                Map<CollectionTemplateTypeName, UUID> templateTypeNameESIDMap = Maps
-                        .newHashMapWithExpectedSize( templateTypeIdESIDMap.size() );
-
-                for ( CollectionTemplateTypeName templateTypeName : CollectionTemplateTypeName.values() ) {
-                    UUID templateTypeId = templateTypeNameIdMap.get( templateTypeName.toString() );
-
-                    if ( templateTypeId == null )
-                        continue;
-
-                    templateTypeNameESIDMap.put( templateTypeName, templateTypeIdESIDMap.get( templateTypeId ) );
-                }
-                orgEntitySetMap.put( userAppConfig.getOrganizationId(), templateTypeNameESIDMap );
-            } );
-
-            entitySets.put( appComponent, orgEntitySetMap );
-        } );
-
-        entitySetIdsByOrgId.putAll( entitySets );
     }
 
     @Scheduled( fixedRate = SYSTEM_APPS_REFRESH_INTERVAL )
@@ -199,13 +135,14 @@ public class ScheduledTasksManager {
             ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
             DataApi dataApi = apiClient.getDataApi();
 
-            UUID fullNamePTID = edmCacheManager.propertyTypeIdsByFQN.get( FULL_NAME_FQN );
-            UUID recordTypePTID = edmCacheManager.propertyTypeIdsByFQN.get( RECORD_TYPE_FQN );
+            ChronicleDataCollectionAppConfig dataCollectionAppConfig = entitySetIdsManager
+                    .getLegacyChronicleDataCollectionAppConfig();
+            UUID appsDictionaryEntitySetId = dataCollectionAppConfig.getAppsDictionaryEntitySetId();
 
-            Iterable<SetMultimap<FullQualifiedName, Object>> entitySetData = dataApi.loadSelectedEntitySetData(
-                    edmCacheManager.entitySetIdMap.get( APPS_DICTIONARY_ES ),
-                    new EntitySetSelection( Optional.of( ImmutableSet.of( fullNamePTID, recordTypePTID ) ) ),
-                    FileType.json
+            Iterable<SetMultimap<FullQualifiedName, Object>> entitySetData = getEntitySetData(
+                    dataApi,
+                    appsDictionaryEntitySetId,
+                    ImmutableSet.of( FULL_NAME_FQN, RECORD_TYPE_FQN )
             );
             logger.info(
                     "Fetched {} entities from chronicle_application_dictionary entity set",
@@ -215,16 +152,8 @@ public class ScheduledTasksManager {
             Set<String> systemAppPackageNames = Sets.newHashSet();
 
             entitySetData.forEach( entity -> {
-                String packageName = null;
-
-                if ( !entity.get( FULL_NAME_FQN ).isEmpty() ) {
-                    packageName = entity.get( FULL_NAME_FQN ).iterator().next().toString();
-                }
-
-                String recordType = null;
-                if ( !entity.get( RECORD_TYPE_FQN ).isEmpty() ) {
-                    recordType = entity.get( RECORD_TYPE_FQN ).iterator().next().toString();
-                }
+                String packageName = getFirstValueOrNull( Multimaps.asMap( entity ), FULL_NAME_FQN );
+                String recordType = getFirstValueOrNull( Multimaps.asMap( entity ), RECORDED_DATE_TIME_FQN );
 
                 if ( RecordType.SYSTEM.name().equals( recordType ) && packageName != null ) {
                     systemAppPackageNames.add( packageName );
@@ -232,7 +161,6 @@ public class ScheduledTasksManager {
 
             } );
 
-            this.systemAppPackageNames.clear();
             this.systemAppPackageNames.addAll( systemAppPackageNames );
 
             logger.info( "Loaded {} items into the system apps cache", systemAppPackageNames.size() );
@@ -243,23 +171,24 @@ public class ScheduledTasksManager {
     }
 
     @Scheduled( fixedRate = USER_APPS_REFRESH_INTERVAL )
-    public void refreshUserAppsFullNames() {
+    @Deprecated
+    public void legacyRefreshUserAppsFullNames() {
         logger.info( "refreshing user apps cache" );
         try {
             ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
             DataApi dataApi = apiClient.getDataApi();
 
-            UUID fullNamePTID = edmCacheManager.propertyTypeIdsByFQN.get( FULL_NAME_FQN );
+            ChronicleDataCollectionAppConfig dataCollectionAppConfig = entitySetIdsManager
+                    .getLegacyChronicleDataCollectionAppConfig();
+
+            UUID userAppsEntitySetId = dataCollectionAppConfig.getUserAppsEntitySetId();
 
             // load entities from chronicle_user_apps
-            Iterable<SetMultimap<FullQualifiedName, Object>> data = dataApi
-                    .loadSelectedEntitySetData(
-                            edmCacheManager.entitySetIdMap.get( USER_APPS_ES ),
-                            new EntitySetSelection(
-                                    Optional.of( Set.of( fullNamePTID ) )
-                            ),
-                            FileType.json
-                    );
+            Iterable<SetMultimap<FullQualifiedName, Object>> data = getEntitySetData(
+                    dataApi,
+                    userAppsEntitySetId,
+                    ImmutableSet.of( FULL_NAME_FQN )
+            );
 
             // get entity key ids
             Set<String> fullNames = StreamUtil.stream( data )
@@ -285,20 +214,20 @@ public class ScheduledTasksManager {
 
             Map<String, Set<UUID>> fullNamesMap = Maps.newLinkedHashMap(); // fullName -> { org1, org2, org3 }
 
-            Map<UUID, Map<CollectionTemplateTypeName, UUID>> orgEntitySets = entitySetIdsByOrgId
-                    .getOrDefault( CHRONICLE_DATA_COLLECTION, Map.of() );
+            Set<UUID> orgIds = entitySetIdsManager.getEntitySetIdsByOrgId()
+                    .getOrDefault( CHRONICLE_DATA_COLLECTION, ImmutableMap.of() ).keySet();
 
-            orgEntitySets.forEach( ( orgId, templateTypeESIDMap ) -> {
+            orgIds.forEach( orgId -> {
                 // load entities from entity set
-                Iterable<SetMultimap<FullQualifiedName, Object>> data = dataApi
-                        .loadSelectedEntitySetData(
-                                templateTypeESIDMap.get( USER_APPS ),
-                                new EntitySetSelection(
-                                        Optional.of( ImmutableSet
-                                                .of( edmCacheManager.propertyTypeIdsByFQN.get( FULL_NAME_FQN ) ) )
-                                ),
-                                FileType.json
-                        );
+                ChronicleDataCollectionAppConfig appConfig = entitySetIdsManager
+                        .getChronicleDataCollectionAppConfig( orgId );
+                UUID userAppsEntitySetId = appConfig.getUserAppsEntitySetId();
+
+                Iterable<SetMultimap<FullQualifiedName, Object>> data = getEntitySetData(
+                        dataApi,
+                        userAppsEntitySetId,
+                        ImmutableSet.of( FULL_NAME_FQN )
+                );
 
                 // map fullNames -> set of orgIds
                 StreamUtil.stream( data )
@@ -317,6 +246,7 @@ public class ScheduledTasksManager {
 
             logger.info( "loaded {} fullnames from user apps entity sets in all orgs", fullNamesMap.keySet().size() );
         } catch ( Exception e ) {
+
             logger.info( "error loading all orgs user apps fullnames", e );
         }
     }
@@ -334,56 +264,53 @@ public class ScheduledTasksManager {
                     .newHashMap(); // orgId -> studyId -> participantId -> participantEKID
             Map<UUID, Map<UUID, UUID>> studyEntityKeyIds = Maps.newHashMap(); // orgId -> studyId -> studyEKID
 
-            Map<UUID, Map<CollectionTemplateTypeName, UUID>> orgEntitySets = entitySetIdsByOrgId
-                    .getOrDefault( CHRONICLE, Map.of() );
+            Set<UUID> orgIds = entitySetIdsManager.getEntitySetIdsByOrgId()
+                    .getOrDefault( CHRONICLE, ImmutableMap.of() ).keySet();
 
-            orgEntitySets.forEach( ( orgId, templateTypeESIDMap ) -> {
+            orgIds.forEach( orgId -> {
 
                 Map<UUID, UUID> studyIds = Maps
                         .newHashMap(); // studyEKID -> studyId (for lookup when processing neighbors)
 
                 // entity set ids
-                UUID studiesESID = entitySetIdsByOrgId.getOrDefault( CHRONICLE, Map.of() )
-                        .getOrDefault( orgId, Map.of() ).getOrDefault( STUDIES, null );
+                ChronicleCoreAppConfig coreAppConfig = entitySetIdsManager.getChronicleAppConfig( orgId );
 
-                UUID participantsESID = entitySetIdsByOrgId.getOrDefault( CHRONICLE, Map.of() )
-                        .getOrDefault( orgId, Map.of() ).getOrDefault( PARTICIPANTS, null );
-                UUID participatedInESID = entitySetIdsByOrgId.getOrDefault( CHRONICLE, Map.of() )
-                        .getOrDefault( orgId, Map.of() ).getOrDefault( PARTICIPATED_IN, null );
+                UUID participatedInESID = coreAppConfig.getParticipatedInEntitySetId();
+                UUID participantsESID = coreAppConfig.getParticipantEntitySetId();
+                UUID studiesESID = coreAppConfig.getStudiesEntitySetId();
 
-                if ( studiesESID == null || participantsESID == null )
+                if ( studiesESID == null || participantsESID == null || participatedInESID == null ) {
                     return;
+                }
 
-                Iterable<SetMultimap<FullQualifiedName, Object>> studyEntities = dataApi
-                        .loadSelectedEntitySetData(
-                                studiesESID,
-                                new EntitySetSelection(
-                                        Optional.of( ImmutableSet.of(
-                                                edmCacheManager.propertyTypeIdsByFQN.get( STRING_ID_FQN )
-                                        ) )
-                                ),
-                                FileType.json
-                        );
+                // load studies entities
+                Iterable<SetMultimap<FullQualifiedName, Object>> studyEntities = getEntitySetData(
+                        dataApi,
+                        studiesESID,
+                        ImmutableSet.of( STRING_ID_FQN )
+                );
 
                 // map studyIds -> studyEKIDs
                 StreamUtil.stream( studyEntities ).map( Multimaps::asMap ).forEach( ( entity ) -> {
                     UUID studyEKID = getFirstUUIDOrNull( entity, ID_FQN );
                     UUID studyId = getFirstUUIDOrNull( entity, STRING_ID_FQN );
-                    if ( studyId == null )
+
+                    if ( studyId == null ) {
                         return;
+                    }
 
                     studyEntityKeyIds.computeIfAbsent( orgId, key -> Maps.newHashMap() ).put( studyId, studyEKID );
                     studyIds.put( studyEKID, studyId );
                 } );
 
-                // get study neighbors constrained by used_by and participated_in associations
-                Set<UUID> edgeESIDS = Sets.newHashSet( participatedInESID )
-                        .stream().filter( Objects::nonNull )
-                        .collect( Collectors.toSet() );
+                if ( studyIds.isEmpty() ) {
+                    logger.info( "study info refresh: organization {} does not have studies", orgId );
+                    return;
+                }
 
-                Set<UUID> srcESIDS = Sets.newHashSet( participantsESID )
-                        .stream().filter( Objects::nonNull )
-                        .collect( Collectors.toSet() );
+                // get study neighbors constrained by participated_in association
+                Set<UUID> edgeESIDS = ImmutableSet.of( participatedInESID );
+                Set<UUID> srcESIDS = ImmutableSet.of( participantsESID );
 
                 Map<UUID, List<NeighborEntityDetails>> studyNeighbors = searchApi.executeFilteredEntityNeighborSearch(
                         studiesESID,
@@ -398,16 +325,16 @@ public class ScheduledTasksManager {
                 // process neighbors
                 Map<UUID, Map<String, UUID>> participantsByStudy = Maps
                         .newHashMap(); // studyId -> participantId -> EKID
+
                 studyNeighbors.forEach( ( studyEKID, neighbors ) -> {
                     UUID studyId = studyIds.get( studyEKID );
 
                     neighbors.forEach( neighbor -> {
-
-                        // edge: participatedIn
                         String participantId = getFirstValueOrNull( neighbor.getNeighborDetails().get(),
                                 PERSON_ID_FQN );
-                        if ( participantId == null )
+                        if ( participantId == null ) {
                             return;
+                        }
 
                         UUID participantEKID = neighbor.getNeighborId().get();
 
@@ -436,8 +363,9 @@ public class ScheduledTasksManager {
     }
 
     @Scheduled( fixedRate = STUDY_INFO_REFRESH_INTERVAL )
-    public void refreshStudyInformation() {
-        logger.info( "refreshing study information for cafe studies" );
+    @Deprecated
+    public void legacyRefreshStudyInformation() {
+        logger.info( "refreshing cache for legacy studies" );
 
         try {
             ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
@@ -446,35 +374,33 @@ public class ScheduledTasksManager {
             EntitySetsApi entitySetsApi = apiClient.getEntitySetsApi();
 
             Map<UUID, UUID> studyEKIDById = Maps.newHashMap(); // studyId -> studyEKID
-            Map<UUID, UUID> studyIdByEKID = Maps.newHashMap(); // studyEKID -> studyId
 
             Map<UUID, Map<String, UUID>> participants = Maps
                     .newHashMap(); // studyID -> participantId -> participantEKID
 
             // entity set ids
-            UUID participatedInESID = edmCacheManager.entitySetIdMap.get( PARTICIPATED_IN_ES );
-            UUID studiesESID = edmCacheManager.entitySetIdMap.get( STUDY_ES );
+            ChronicleCoreAppConfig coreAppConfig = entitySetIdsManager.getLegacyChronicleAppConfig();
 
-            Iterable<SetMultimap<FullQualifiedName, Object>> studyEntities = dataApi
-                    .loadSelectedEntitySetData(
-                            studiesESID,
-                            new EntitySetSelection(
-                                    Optional.of( ImmutableSet.of(
-                                            edmCacheManager.propertyTypeIdsByFQN.get( STRING_ID_FQN )
-                                    ) )
-                            ),
-                            FileType.json
-                    );
+            UUID participatedInESID = coreAppConfig.getParticipatedInEntitySetId();
+            UUID studiesESID = coreAppConfig.getStudiesEntitySetId();
+
+            // get study entities
+            Iterable<SetMultimap<FullQualifiedName, Object>> studyEntities = getEntitySetData(
+                    dataApi,
+                    studiesESID,
+                    ImmutableSet.of( STRING_ID_FQN )
+            );
 
             // process studies
             StreamUtil.stream( studyEntities ).map( Multimaps::asMap ).forEach( ( entity ) -> {
                 UUID studyEKID = getFirstUUIDOrNull( entity, ID_FQN );
                 UUID studyId = getFirstUUIDOrNull( entity, STRING_ID_FQN );
-                if ( studyId == null )
+
+                if ( studyId == null ) {
                     return;
+                }
 
                 studyEKIDById.put( studyId, studyEKID );
-                studyIdByEKID.put( studyEKID, studyId );
             } );
 
             studyEKIDById.keySet().forEach( studyId -> {
@@ -495,8 +421,10 @@ public class ScheduledTasksManager {
                     neighbors.forEach( neighbor -> {
                         String participantId = getFirstValueOrNull( neighbor.getNeighborDetails().get(),
                                 PERSON_ID_FQN );
-                        if ( participantId == null )
+
+                        if ( participantId == null ) {
                             return;
+                        }
 
                         UUID participantEKID = neighbor.getNeighborId().get();
 
@@ -510,12 +438,12 @@ public class ScheduledTasksManager {
             this.studyEKIDById.putAll( studyEKIDById );
             this.studyParticipants.putAll( participants );
 
-            logger.info( "loaded {} study EKIDs from cafe studies", studyEKIDById.size() );
-            logger.info( "loaded {} participants from cafe participants",
+            logger.info( "loaded {} studies from legacy study dataset", studyEKIDById.size() );
+            logger.info( "loaded {} participants from legacy participants datasets",
                     participants.values().stream().mapToInt( map -> map.values().size() ).sum() );
 
         } catch ( Exception e ) {
-            logger.error( "error refreshing study information for cafe studies", e );
+            logger.error( "error refreshing study information for legacy studies", e );
         }
     }
 
@@ -527,14 +455,19 @@ public class ScheduledTasksManager {
             ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
             DataApi dataApi = apiClient.getDataApi();
 
-            Map<UUID, Map<CollectionTemplateTypeName, UUID>> orgEntitySets = entitySetIdsByOrgId
-                    .getOrDefault( CHRONICLE_DATA_COLLECTION, Map.of() );
+            Set<UUID> orgIds = entitySetIdsManager.getEntitySetIdsByOrgId()
+                    .getOrDefault( CHRONICLE_DATA_COLLECTION, ImmutableMap.of() ).keySet();
 
             Map<UUID, Map<String, UUID>> deviceIdsByOrg = Maps.newHashMap();
-            orgEntitySets.forEach( ( orgId, templateTypeESIDMap ) -> {
+
+            orgIds.forEach( orgId -> {
+                ChronicleDataCollectionAppConfig appConfig = entitySetIdsManager
+                        .getChronicleDataCollectionAppConfig( orgId );
+                UUID deviceEntitySetId = appConfig.getDeviceEntitySetId();
+
                 Map<String, UUID> devicesByEKID = getDeviceIdsByEKID(
                         dataApi,
-                        templateTypeESIDMap.get( DEVICE )
+                        deviceEntitySetId
                 );
                 deviceIdsByOrg.put( orgId, devicesByEKID );
             } );
@@ -550,21 +483,25 @@ public class ScheduledTasksManager {
     }
 
     @Scheduled( fixedRate = DEVICES_INFO_REFRESH_INTERVAL )
-    public void refreshDevicesCache() {
-        logger.info( "refreshing devices info for cafe users" );
+    @Deprecated
+    public void legacyRefreshDevicesCache() {
+        logger.info( "refreshing devices info for legacy devices" );
         try {
             ApiClient apiClient = apiCacheManager.prodApiClientCache.get( ApiClient.class );
             DataApi dataApi = apiClient.getDataApi();
 
-            Map<String, UUID> deviceIdsByEKID = getDeviceIdsByEKID( dataApi,
-                    edmCacheManager.entitySetIdMap.get( DEVICES_ES ) );
+            ChronicleDataCollectionAppConfig dataCollectionAppConfig = entitySetIdsManager
+                    .getLegacyChronicleDataCollectionAppConfig();
+            UUID deviceEntitySetId = dataCollectionAppConfig.getDeviceEntitySetId();
+
+            Map<String, UUID> deviceIdsByEKID = getDeviceIdsByEKID( dataApi, deviceEntitySetId );
 
             this.deviceIdsByEKID.putAll( deviceIdsByEKID );
 
-            logger.info( "loaded {} deviceIds for cafe users", deviceIdsByEKID.size() );
+            logger.info( "loaded {} deviceIds from legacy device dataset", deviceIdsByEKID.size() );
 
         } catch ( Exception e ) {
-            logger.error( "error refreshing devices cache for cafe users", e );
+            logger.error( "error refreshing cache for legacy devices", e );
         }
     }
 
@@ -572,26 +509,59 @@ public class ScheduledTasksManager {
         Map<String, UUID> deviceIds = Maps.newHashMap();
 
         // load entities
-        Iterable<SetMultimap<FullQualifiedName, Object>> deviceEntities = dataApi
-                .loadSelectedEntitySetData(
-                        entitySetId,
-                        new EntitySetSelection(
-                                Optional.of( ImmutableSet.of(
-                                        edmCacheManager.propertyTypeIdsByFQN.get( STRING_ID_FQN )
-                                ) )
-                        ),
-                        FileType.json
-                );
+        Iterable<SetMultimap<FullQualifiedName, Object>> deviceEntities = getEntitySetData(
+                dataApi,
+                entitySetId,
+                ImmutableSet.of( STRING_ID_FQN )
+        );
 
         StreamUtil.stream( deviceEntities ).map( Multimaps::asMap ).forEach( ( entity ) -> {
             UUID deviceEKID = getFirstUUIDOrNull( entity, ID_FQN );
             String deviceId = getFirstValueOrNull( entity, STRING_ID_FQN );
-            if ( deviceId == null )
+
+            if ( deviceId == null ) {
                 return;
+            }
 
             deviceIds.put( deviceId, deviceEKID );
         } );
 
         return deviceIds;
+    }
+
+    public Map<UUID, Map<UUID, Map<String, UUID>>> getStudyParticipantsByOrg() {
+        return studyParticipantsByOrg;
+    }
+
+    public Map<UUID, Map<UUID, UUID>> getStudyEntityKeyIdsByOrg() {
+        return studyEntityKeyIdsByOrg;
+    }
+
+    public Map<UUID, Map<String, UUID>> getDeviceIdsByOrg() {
+        return deviceIdsByOrg;
+    }
+
+    public Map<String, Set<UUID>> getUserAppsFullNamesByOrg() {
+        return userAppsFullNamesByOrg;
+    }
+
+    public Map<String, UUID> getDeviceIdsByEKID() {
+        return deviceIdsByEKID;
+    }
+
+    public Map<UUID, Map<String, UUID>> getStudyParticipants() {
+        return studyParticipants;
+    }
+
+    public Map<UUID, UUID> getStudyEKIDById() {
+        return studyEKIDById;
+    }
+
+    public Set<String> getUserAppsFullNameValues() {
+        return userAppsFullNameValues;
+    }
+
+    public Set<String> getSystemAppPackageNames() {
+        return systemAppPackageNames;
     }
 }
